<resources>
    <string name="app_name">Rachel\'s Sandwiches</string>
    <string name="new_order_title">New Order</string>
    <string name="name">Name:</string>
    <string name="pickles">Pickles:</string>
    <string name="plus_sign">+</string>
    <string name="minus_sign">-</string>
    <string name="hummus">Hummus</string>
    <string name="tahini">Tahini</string>
    <string name="comments">Comments:</string>
    <string name="save">SAVE</string>
    <string name="your_order_is_ready">Your order is ready!</string>
    <string name="order_ready_subs">Rachel is in campus\ncome and get you sandwitch</string>
    <string name="order_in_progress_subs">Your order is in the making...</string>
    <string name="order_in_progress_title">Hurray!</string>
    <string name="order_edit_title">Order is waiting...</string>
    <string name="order_edit_subs">You can still edit it</string>
    <string name="cancel">CANCEL</string>
    <string name="got_it">GOT IT!</string>
    <string name="app_name_line_break">Rachel\'s\nSandwiches</string>
</resources>