<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".EditOrderActivity">

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/startGuideline"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.05" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/endGuideline"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.95" />

    <TextView
        android:id="@+id/titleText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="@color/orange_700"
        android:layout_marginTop="16dp"
        android:text="@string/order_edit_title"
        android:textSize="32sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/subtitleText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/order_edit_subs"
        android:textSize="16sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/titleText" />

    <TextView
        android:id="@+id/picklesText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:text="@string/pickles"
        android:textSize="18sp"
        app:layout_constraintStart_toStartOf="@+id/startGuideline"
        app:layout_constraintTop_toBottomOf="@+id/subtitleText" />

    <Button
        android:id="@+id/picklesAdd"
        android:layout_width="40dp"
        android:layout_height="40dp"
        android:text="@string/plus_sign"
        android:layout_marginStart="8dp"
        app:layout_constraintTop_toTopOf="@+id/picklesText"
        app:layout_constraintBottom_toBottomOf="@+id/picklesText"
        app:layout_constraintStart_toEndOf="@+id/picklesText"/>

    <TextView
        android:id="@+id/picklesQuantity"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="18sp"
        android:text="0"
        android:paddingHorizontal="16dp"
        app:layout_constraintTop_toTopOf="@+id/picklesAdd"
        app:layout_constraintBottom_toBottomOf="@+id/picklesAdd"
        app:layout_constraintStart_toEndOf="@+id/picklesAdd"/>

    <Button
        android:id="@+id/picklesRemove"
        android:layout_width="40dp"
        android:layout_height="40dp"
        android:text="@string/minus_sign"
        app:layout_constraintTop_toTopOf="@+id/picklesAdd"
        app:layout_constraintStart_toEndOf="@+id/picklesQuantity"/>


    <CheckBox
        android:id="@+id/hummusCheckBox"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:text="@string/hummus"
        android:textSize="18sp"
        app:layout_constraintStart_toStartOf="@+id/startGuideline"
        app:layout_constraintTop_toBottomOf="@+id/picklesText" />

    <CheckBox
        android:id="@+id/tahiniCheckBox"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:text="@string/tahini"
        android:textSize="18sp"
        app:layout_constraintStart_toEndOf="@+id/hummusCheckBox"
        app:layout_constraintTop_toTopOf="@+id/hummusCheckBox" />

    <TextView
        android:id="@+id/commentsText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:text="@string/comments"
        android:textSize="18sp"
        app:layout_constraintStart_toStartOf="@+id/startGuideline"
        app:layout_constraintTop_toBottomOf="@+id/hummusCheckBox" />

    <EditText
        android:id="@+id/commentsEditText"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginVertical="8dp"
        android:background="@drawable/edit_text_multiline_background"
        android:gravity="top"
        android:padding="8dp"
        android:inputType="textMultiLine"
        app:layout_constraintBottom_toTopOf="@+id/buttons"
        app:layout_constraintEnd_toEndOf="@+id/endGuideline"
        app:layout_constraintStart_toEndOf="@+id/startGuideline"
        app:layout_constraintTop_toBottomOf="@+id/commentsText" />

    <RelativeLayout
        android:id="@+id/buttons"
        android:orientation="horizontal"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="16dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">

    <Button
        android:id="@+id/saveButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/save"
        android:layout_marginHorizontal="8dp"
        app:layout_constraintBottom_toBottomOf="parent"/>

    <Button
        android:id="@+id/cancelButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/cancel"
        android:layout_marginHorizontal="8dp"
        android:layout_toEndOf="@+id/saveButton"/>

    </RelativeLayout>

</androidx.constraintlayout.widget.ConstraintLayout>